--- a/index.html
+++ b/index.html
@@ -18,15 +18,14 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Diyetak">
+  <meta name="description" content="A new Flutter project.">
 
-  <!-- iOS meta tags & icons -->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
 
-  <title>diyetak_landing</title>
+  <title>diyetak</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
